--- a/Resources/Prototypes/Entities/Objects/Materials/Sheets/metal.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/Sheets/metal.yml
@@ -7,6 +7,7 @@
   - type: Sprite
     netsync: false
     sprite: Objects/Materials/Sheets/metal.rsi
+    scale: 0.7, 0.7
   - type: Item
     sprite: Objects/Materials/Sheets/metal.rsi
   - type: DynamicPrice
