--- a/Resources/Prototypes/Entities/Objects/Materials/Sheets/other.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/Sheets/other.yml
@@ -7,6 +7,7 @@
   - type: Sprite
     netsync: false
     sprite: Objects/Materials/Sheets/other.rsi
+    scale: 0.7, 0.7
   - type: Item
     sprite: Objects/Materials/Sheets/other.rsi
   - type: ItemStatus
