--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Materials/materials.yml
@@ -7,6 +7,7 @@
     netsync: false
     sprite: Nyanotrasen/Objects/Materials/materials.rsi
     state: bluespace
+    scale: 1, 1
   - type: Tag
     tags:
       - BluespaceCrystal
